tests/snapshots/snapshots__type_error_arith_on_string.snap
---
source: tests/snapshots.rs
expression: "analyze_diag(\"function f()\\n  return 1 + \\\"a\\\"\\nend\")"
---
error[E0401]: expected a number: expected number, found string
  --> 2:14
   |
  2|   return 1 + "a"
   |              ^^^
